@@ -5294,15 +5294,37 @@ decl_stmt|;
 name|String
 name|rsName
 init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
 name|isa
 operator|!=
 literal|null
-condition|?
+condition|)
+block|{
+name|rsName
+operator|=
+name|Addressing
+operator|.
+name|createHostAndPortStr
+argument_list|(
 name|isa
 operator|.
-name|toString
+name|getHostName
 argument_list|()
-else|:
+argument_list|,
+name|isa
+operator|.
+name|getPort
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|rsName
+operator|=
 name|Addressing
 operator|.
 name|createHostAndPortStr
@@ -5311,7 +5333,8 @@ name|hostname
 argument_list|,
 name|port
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
 comment|// See if we already have a connection (common case)
 name|server
 operator|=
@@ -5459,10 +5482,20 @@ name|servers
 operator|.
 name|put
 argument_list|(
+name|Addressing
+operator|.
+name|createHostAndPortStr
+argument_list|(
 name|address
 operator|.
-name|toString
+name|getHostName
 argument_list|()
+argument_list|,
+name|address
+operator|.
+name|getPort
+argument_list|()
+argument_list|)
 argument_list|,
 name|server
 argument_list|)
