@@ -194,6 +194,8 @@ Release 0.91.0 - Unreleased
                if it already exists (Mikhail Bautin)
    HBASE-4179  Failed to run RowCounter on top of Hadoop branch-0.22
                (Michael Weng)
+   HBASE-4181  HConnectionManager can't find cached HRegionInterface and makes clients
+               work very slow (Jia Liu)
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
